Fix spacing and styling on Funds activity page

--- a/src/scss/_funds_activity.scss
+++ b/src/scss/_funds_activity.scss
@@ -70,7 +70,6 @@
     &__body {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
 
         .ellipse {
             width: 8px;
@@ -85,19 +84,23 @@
             line-height: 25.6px;
             color: $black;
         }
+
+        .status {
+            color: #787e82;
+            font-size: 14px;
+        }
     }
 
-    .details {
+    &__details {
         display: flex;
-        width: 20%;
+        margin-left: 35px;
         flex-direction: column;
         align-items: flex-end;
         justify-content: space-between;
-        gap: 10px;
 
         .funds_act_entry__date {
             white-space: nowrap;
-            font-size: 13px;
+            font-size: 16px;
             color: #787e82;
         }
 
@@ -126,19 +129,27 @@
     .funds_act_entry-tab {
         padding: 20px;
         display: flex;
-        position: relative;
+        align-items: flex-start;
 
         .funds_act_entry__body {
-            padding-left: 65px;
             gap: 5px;
+            margin-left: 16px;
+            flex-grow: 1;
 
             .funds_act_entry__amount__container {
                 min-width: 80px;
 
                 .funds-dollar-icon {
+                    opacity: 0.5;
                     width: 16px;
                     height: 16px;
                 }
+            }
+
+            .wallet {
+                font-size: 18px;
+                font-weight: 500;
+                color: #686777;
             }
 
             .funds_act_entry__amount__number {
@@ -147,17 +158,11 @@
             }
         }
 
-        .arrow {
-            position: absolute;
-            width: 48px;
-            height: 48px;
-            left: 20px;
-            top: 20px;
-        }
-
-        .details {
-            width: 120px;
+        .funds_act_entry__details {
             justify-content: flex-end;
+            margin-left: 35px;
+            align-self: flex-end;
+            line-height: 25.6px;
 
             .funds_act_entry__date {
                 font-size: 12px;
@@ -173,11 +178,11 @@
         box-sizing: border-box;
         padding: 20px;
 
-        .details {
+        .funds_act_entry__details {
             width: auto;
             position: absolute;
             right: 20px;
-            top: 20px;
+            top: 24px;
             height: calc(100% - 40px);
             justify-content: space-between;
 
@@ -188,11 +193,13 @@
         }
 
         .funds_act_entry__body {
-            padding-left: 40px;
             width: 100%;
+            margin-left: 0;
+            gap: 10px;
 
             .order-2 {
                 order: 2;
+                margin-top: 14px;
             }
 
             .order-1 {
@@ -210,23 +217,27 @@
 
             .status {
                 position: absolute;
-                top: 57px;
-                left: 150px;
+                top: 71px;
+                left: 137px;
+                color: $black;
+            }
+
+            .wallet {
+                font-weight: 600;
+                color: $black-000;
+            }
+
+            .ellipse {
+                margin-left: 16px;
             }
 
             .funds_act_entry__amount__container {
-                gap: 5px;
-
-                .arrow-icon {
-                    width: 16px;
-                    height: 16px;
-                    margin-top: 22px;
-                }
+                gap: 8px;
 
                 .funds-arrow-icon {
                     width: 24px;
                     height: 24px;
-                    top: 20px;
+                    margin-right: 8px;
                 }
 
                 .address {
@@ -236,20 +247,22 @@
                 .funds-dollar-icon {
                     width: 16px;
                     height: 16px;
+                    opacity: 1;
                 }
             }
 
             .funds_act_entry__amount__number {
                 margin-left: 0;
+                font-size: 18px;
             }
         }
+    }
 
-        .arrow {
-            position: absolute;
-            width: 24px;
-            height: 24px;
-            left: 20px;
-            top: 20px;
+    .funds_act_entry {
+        .funds-arrow-icon {
+            width: 16px;
+            height: 16px;
+            margin-right: 5px;
         }
     }
 }
